--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ mensaje.crear.error=Error al crear {0}, ${mensaje.contactar}
 mensaje.actualizar.error=Error al actualizar {0}, ${mensaje.contactar}
 mensaje.eliminar.error=Error al eliminar {0}, ${mensaje.contactar}
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.show_sql = true
